# opengl-transparency

./: CMakeLists.txt  README.md  notes.md
shaders/: all_shaders.txt  basic.frag.glsl  basic.vert.glsl  depth_peel.frag.glsl  depth_peel.vert.glsl  depth_peeling.frag.glsl  depth_peeling.vert.glsl  from_framebuffer.frag.glsl  from_framebuffer.vert.glsl  simple.frag.glsl  simple.vert.glsl
src/: camera.cpp  camera.h  core.h  framebuffer.cpp  framebuffer.h  main.cpp  mesh.cpp  mesh.h  ping_pong_framebuffer.cpp  ping_pong_framebuffer.h  shader_program.cpp  shader_program.h  window.cpp  window.h
